# no-ponto-core

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/accounts/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_birth_date.py
apps/accounts/tests/: factories.py  test_client_otp.py  test_register.py
apps/appointments/: apps.py  cancellation.py  models.py  phone.py  provider_serializers.py  provider_views.py  rescheduling.py  serializers.py  tasks.py  urls.py  views.py
apps/appointments/migrations/: 0001_agendamento_online_cliente.py  0002_appointment_cancelled_at_appointment_cancelled_by_and_more.py  0003_appointment_cancellation_reason.py  0004_appointment_client.py  0005_update_appointment_staff_fk.py
apps/appointments/tests/: factories.py  test_provider_appointments.py  test_public_appointments.py
apps/notifications/: apps.py  models.py  tasks.py  urls.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_type.py  0003_notification_email_channel_and_partial_unique.py
apps/notifications/tests/: test_notify_provider_new_appointment.py
apps/notifications/whatsapp/: __init__.py  base.py  evolution.py  meta.py
apps/providers/: apps.py  models.py  scheduling_views.py  serializers.py  signals.py  staff_serializers.py  staff_views.py  tasks.py  urls.py  views.py
apps/providers/migrations/: 0001_initial.py  0002_add_working_hours_and_schedule_block.py  0003_add_staff.py  0004_add_service_staff.py  0005_populate_owner_staff.py  0006_update_staff_fk_working_hours_schedule_block.py  0007_rename_providers_st_provide_is_active_idx_providers_s_provide_fdfcd3_idx.py  0008_providerprofile_average_rating_and_more.py
apps/providers/tests/: factories.py  test_client_history.py  test_profile.py  test_scheduling.py  test_staff.py
apps/reviews/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py
apps/reviews/tests/: test_review_flow.py
apps/services/: apps.py  models.py  serializers.py  urls.py  views.py
apps/services/migrations/: 0001_initial.py  0002_agendamento_online_cliente.py  0003_service_new_fields.py  0004_service_staff_members.py
apps/services/tests/: factories.py  test_services.py  test_services_extended.py
apps/webhooks/: apps.py  models.py  tasks.py  urls.py  views.py
apps/webhooks/migrations/: 0001_initial.py
apps/webhooks/tests/: test_views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
core/: exceptions.py  pagination.py  permissions.py  urls.py
core/utils/: availability.py
tests/: conftest.py
tests/accounts/: test_user_model.py
tests/appointments/: test_whatsapp_flow.py
